# catalyst-center-super-mcp

./: .env.example  .gitignore  AGENTS.md  CATALYST_CENTER_BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  catalyst-center-mcp.yaml  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml  docs.yml  lint.yml  milestone-rollover.yml  release.yml  test.yml
catalyst_center_mcp/: __init__.py  auth.py  config.py  diff.py  dispatcher.py  loader.py  pagination.py  server.py  tools.py  transport_auth.py
catalyst_center_mcp/cli/: __init__.py  _common.py  discover.py  fetch.py  list_versions.py
catalyst_center_mcp/fetcher/: __init__.py  discover.py
docs/: index.md
docs/architecture/: data-flow.md  overview.md
docs/contributing/: release-process.md
docs/guides/: tool-splitting.md
docs/reference/: cli.md
docs/superpowers/findings/: 2026-05-25-sandbox-auth.md  2026-05-25-spec-diff.md
docs/superpowers/plans/: 2026-05-25-catalyst-center-bootstrap.md
docs/superpowers/specs/: 2026-05-25-catalyst-center-bootstrap-design.md
scripts/: sandbox_smoke_v0.2.0.py  sandbox_smoke_v0.3.0.py
tests/: conftest.py  test_auth.py  test_auth_jwt.py  test_cli_discover.py  test_cli_fetch.py  test_cli_list_versions.py  test_config.py  test_diff.py  test_dispatcher.py  test_dispatcher_proactive_refresh.py  test_fetcher.py  test_fetcher_discover.py  test_fetcher_list.py  test_integration_smoke.py  test_loader.py  test_loader_disambig.py  test_loader_disambig_real_spec.py  test_pagination.py  test_retry.py  test_server.py  test_server_auto_fetch.py  test_server_dispatch.py  test_smoke.py  test_tools.py  test_transport_auth.py
tests/fixtures/: v0.1.0_action_names.json
tests/fixtures/specs/2.3.7.9/: catalyst-center-min.json
