[project]
name = "catalyst-center-super-mcp"
version = "0.2.0"
description = "FastMCP server for the Cisco Catalyst Center (formerly DNA Center) API, generated dynamically from the official OpenAPI specs."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Thomas Christory", email = "mick27@gmail.com" }]
keywords = ["catalyst-center", "dna-center", "cisco", "mcp", "fastmcp", "openapi", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
catalyst-center-mcp = "catalyst_center_mcp.server:main"
catalyst-center-super-mcp = "catalyst_center_mcp.server:main"

[project.urls]
Homepage = "https://github.com/thomaschristory/catalyst-center-super-mcp"
Documentation = "https://thomaschristory.github.io/catalyst-center-super-mcp/"
Issues = "https://github.com/thomaschristory/catalyst-center-super-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catalyst_center_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM", "TID", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
